--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       
       - uses: action/checkout@v4
-      - name: uses Nod.js ${{ matrix.node-version }}
+      - uses: uses Nod.js ${{ matrix.node-version }}
         with:
           node-version: ${{ matrix.node-version }}
 
