--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,12 @@ on:
   push:
     branches: [ main ]
 
+env:
+  BUILD_CONFIGURATION: Production
+
 jobs:
+  
+
   build:
   
     runs-on: ubuntu-latest
@@ -14,6 +19,9 @@ jobs:
         node-version: ['18.x', '20.x']
 
     steps:
+    
+      - name: Job environment
+        run: echo $BUILD_CONFIGURATION
       
       - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
