--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         run: echo $BUILD_CONFIGURATION
       - name: Use secret
         run: |
-          echo "Access Token: ${{" secrets.ACCESS_TOKEN "}}"
+          echo "Access Token: ${{ secrets.ACCESS_TOKEN }}"
       
       - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
