--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,5 +51,10 @@ jobs:
         run: npm run build --if-present
       - name: Run tests
         run: npm test
-
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Run linter
+        run: npm run lint
 
